--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -3,3 +3,10 @@
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 15px;
 }
+
+@media screen and (max-width: 575px) {
+    .review-container {
+    grid-template-columns: repeat(1, 1fr);
+    }
+    
+}
